--- a/css/app.css
+++ b/css/app.css
@@ -56,3 +56,25 @@ a {
   text-align: center;
   padding: 1rem 0;
 }
+
+/* Contenido */
+.sidebar {
+  background-color: #E5E5E5;
+}
+
+.contenido-principal {
+  max-width: 50%;
+  padding-top: 2rem;
+  margin: 0 auto 2rem auto;
+}
+
+@media screen and (min-width: 768px) {
+  .contenido {
+    display: flex;
+  }
+  .contenido .sidebar {
+    padding: 2rem;
+    flex: 0 0 30%;
+    order: -1;
+  }
+}
